# 2023-07-23_TASK11_HW05_dyn_lib_cmake

./: CMakeLists.txt  e_triangle.cpp  e_triangle.h  figure.cpp  figure.h  funcs.cpp  funcs.h  i_triangle.cpp  i_triangle.h  main.cpp  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  r_triangle.cpp  r_triangle.h  rectangle.cpp  rectangle.h  rhomb.cpp  rhomb.h  square.cpp  square.h  triangle.cpp  triangle.h
